[package]
name = "kaliquote"
version = "0.3.0"
authors = ["Bart Willems"]
edition = "2018"

[dependencies]
simple-error = "0.1.13"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
libc = "0.2.50"
structopt = "0.2"
clap = "2.32"
simplelog = "*"
log = "0.4.6"

[profile.release]
lto = true
panic = 'abort'
